[gd_scene load_steps=2 format=2]

[ext_resource path="res://Menu/MainMenu.gd" type="Script" id=1]

[node name="Menu" type="Control"]
anchor_left = 0.5
anchor_top = 0.499213
anchor_right = 0.5
anchor_bottom = 0.499213
margin_left = -300.0
margin_top = -400.0
margin_right = 300.0
margin_bottom = 400.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -31.5
margin_top = -46.0
margin_right = 31.5
margin_bottom = 46.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_right = 63.0
margin_bottom = 20.0
focus_neighbour_top = NodePath("../QuitButton")
text = "Start"

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 63.0
margin_bottom = 44.0
text = "Credits"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 63.0
margin_bottom = 68.0
focus_neighbour_bottom = NodePath("../StartButton")
text = "Quit"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
